--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,14 @@
     <title>Ugly Recipe Book</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" >   
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
-    <script src="app.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-route.min.js"></script>
+
+
   </head>
   <body ng-controller="uglyController">
     <div id="main">
       <h1>{{recipes}}</h1>
     </div>
+    <script src="public/app.js"></script>
   </body>
 </html>
