--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,33 @@
 
   </head>
   <body ng-controller="uglyController">
-    <div id="main">
-      <h1>{{recipes}}</h1>
-    </div>
+    <div class="col-md-6 col-md-offset-3">   
+      <div id="main">
+        <h1>Crappy Recipe Holder</h1>
+      </div>
+      <div ng-repeat="recipe in recipes">
+        {{recipe.title}} Link - <a href={{recipe.url}}>{{recipe.url}}</a>
+      </div>
+
+
+        <form ng-submit="addNew()"
+          style="margin-top:30px;">
+          <h3>Add a new recipe</h3>
+
+          <div class="form-group">
+            <input type="text"
+              class="form-control"
+              placeholder="Name"
+              ng-model="title"></input>
+          </div>
+          <div class="form-group">
+            <input type="text"
+            class="form-control"
+            placeholder="Link"
+            ng-model="link"></input>
+          </div>
+          <button type="submit" class="btn btn-primary">Submit</button>
+        </form>
+      </div>
   </body>
 </html>
