--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
      
     <div class="col-md-6 col-md-offset-3">   
       <div id="main">
-        <h1>Crappy Recipe Holder</h1>
+        <h1>Ugly Recipe Holder</h1>
       </div>
       <p>Click to remove a recipe</p>  
       <div ng-repeat="recipe in recipes">
