--- a/public/index.html
+++ b/public/index.html
@@ -2,8 +2,11 @@
   <head>
     <title>Ugly Recipe Book</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" >   
+    <link rel="stylesheet" type="text/css" href="style.css">
+
     <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.4.9/angular.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.0/angular-route.min.js"></script>
+
 
     <script src="/app.js"></script>
 
@@ -15,9 +18,6 @@
         <h1>Ugly Recipe Holder</h1>
       </div>
       <p>Click to remove a recipe</p>  
-      <div ng-repeat="recipe in recipes">
-        <h3 ng-click="removeRecipe(title)">{{recipe.title}} <small> <a href={{recipe.url}}>{{recipe.link}}</a></small></h3>
-      </div>
 
         <form ng-submit="addNew()"
           style="margin-top:30px;">
@@ -37,6 +37,12 @@
           </div>
           <button type="submit" class="btn btn-primary">Submit</button>
         </form>
+        <br>
+        <h2 class="bottom">Your Current Recipes</h2>
+        
+        <div ng-repeat="recipe in recipes">
+          <h3 ng-click="removeRecipe(title)">{{recipe.title}} <small> <a href={{recipe.url}}>{{recipe.link}}</a></small></h3>
+        </div>
       </div>
   </body>
 </html>
