--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
       <div id="main">
         <h1>Ugly Recipe Holder</h1>
       </div>
-      <p>Click to remove a recipe</p>  
+      <p>Click the recipe name to remove it</p>  
 
         <form name="newRecipe" ng-submit="addNew()"
           style="margin-top:30px;" novalidate="">
